--- a/Pacific Trails Resort CH.4/pacific.css
+++ b/Pacific Trails Resort CH.4/pacific.css
@@ -1,16 +1,15 @@
 
 body{ 
 	color: #666666;
-	background-color: #90C7E3;
-	background-image: linear-gradient(to bottom,#FFFFFF, #90C7E3);
-
+	background-color: #4F6D93;
+	background-image: linear-gradient(to bottom,#FFFFFF, #4F6D93);
 	font-family: 'Roboto', sans-serif; font-weight: 400;
 	}
 #wrapper{
 	margin-left: auto;
 	margin-right: auto;
 	width : 80%;
-	background-color: #FFFFFF;
+	background-color: #90C7E3;
 	min-width: 960px;
 	max-width: 2048px;
 	box-shadow: 3px 3px 3px #333333;
@@ -20,7 +19,6 @@ header{
 	
 }
 h1{ 
-	
 	background-color: #000033;
 	margin-bottom: 0;
 	margin-top: 0;
@@ -33,22 +31,37 @@ h1{
 	padding-top: 15px;
 	}
 #nav{
+	padding: 20px;
+	float: left;
+	width: 160px;
+}
+#nav ul {
+	padding-left: 0;
+	margin: 0;
+	list-style-type:  none; 
+	font-size: 1.2em;
+}
+nav a:link{
+	color: #000033;
+}
+nav a:visited{
+	color: #344873;
+}
+nav a:hover{
+	color: #FFFFFF;
+}
+main {
 	background-color: #FFFFFF;
-}
-
-nav a{	
-	font-weight: bold;
-	text-decoration: none;
-}
-
-#main {
 	padding-top: 1px;
 	padding-right: 20px;
-	padding-left: 20px;
+	padding-left: 30px;
 	padding-bottom: 20px;
 	display: block;
+	margin-left: 190px;
 }
-
+main ul{
+	list-style-image: url(marker.gif);
+}
 h2{
 	color: #3399CC;
 	font-family: 'Roboto', sans-serif; font-weight: 400;
@@ -66,6 +79,7 @@ dt{
 	background-image: url(coasthero.jpg);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
+	margin-left: 190px;
 }
 
 #yurthero{
@@ -73,6 +87,7 @@ dt{
 	background-image: url(yurthero.jpg);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
+	margin-left: 190px;
 }
 
 #trailhero{
@@ -80,6 +95,7 @@ dt{
 	background-image: url(trailhero.jpg);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
+	margin-left: 190px;
 }
 .resort {
 	color: #5C7FA3;
@@ -89,13 +105,12 @@ dt{
 #contact{
 	font-size: 90%;
 }
-ul{
-	list-style-image: url(marker.gif);
-}
 footer{
 	font-size: 75%;
 	text-align: center;
 	font-style: italic;
 	font-family: 'Roboto', sans-serif; font-weight: 400;
 	padding: 20px;
+	margin-left: 190px;
+	background-color: #FFFFFF;
 }
