--- a/Pacific Trails Resort CH.4/pacific.css
+++ b/Pacific Trails Resort CH.4/pacific.css
@@ -1,4 +1,4 @@
-
+header, main, nav, footer, figure, figcaption, aside, section, article {display: block;}
 body{ 
 	color: #666666;
 	background-color: #4F6D93;
@@ -105,6 +105,12 @@ dt{
 #contact{
 	font-size: 90%;
 }
+#mobile{
+	display: none;
+}
+#desktop{
+	display: inline;
+}
 footer{
 	font-size: 75%;
 	text-align: center;
@@ -113,4 +119,50 @@ footer{
 	padding: 20px;
 	margin-left: 190px;
 	background-color: #FFFFFF;
+}
+@media only screen and (max-width: 64em){
+body{margin: 0; 
+background-color: #FFFFFF;}
+#wrapper{min-width: 0;
+width: auto;
+box-shadow: none;}
+main{margin-left: 0;}
+nav{float: none;
+width: auto;
+text-align: center;
+padding: 0.5em;}
+nav li{ display: inline;
+padding-top: 0.25em;
+padding-bottom: 0.25em;
+padding-right: 0.75em;
+padding-left: 0.75em;}
+#homehero{margin-left: 0;
+height: 200px;}
+#yurthero{margin-left: 0;
+height: 200px;}
+#trailhero{margin-left: 0;
+height: 200px;}
+footer{margin-left: 0;}
+}
+@media only screen and (max-width: 37.5em){
+	#header{padding-top:1em;}
+	main{padding-top: 0.1em;
+	padding-bottom: 0.1em;
+	padding-left: 1em;
+	padding-right: 1em;
+	font-size: 90%;}
+	h1{font-size: 1.5em;}
+	nav{padding: 0;}
+	nav li{display: block;
+	margin: 0;
+	border-bottom: 2px solid #330000;}
+	nav a{display: block;}
+	#homehero{background-image: none;
+	height: 0;}
+	#yurthero{background-image: none;
+	height: 0;}
+	#trailhero{background-image: none;
+	height: 0;}
+	#mobile{display: inline;}
+	#desktop{display: none;}
 }
