--- a/Pacific Trails Resort CH.4/pacific.css
+++ b/Pacific Trails Resort CH.4/pacific.css
@@ -1,4 +1,4 @@
-
+header, main, nav, footer, figure, figcaption, aside, section, article {display: block;}
 body{ 
 	color: #666666;
 	background-color: #4F6D93;
@@ -105,6 +105,12 @@ dt{
 #contact{
 	font-size: 90%;
 }
+#mobile{
+	display: none;
+}
+#desktop{
+	display: inline;
+}
 footer{
 	font-size: 75%;
 	text-align: center;
@@ -113,7 +119,6 @@ footer{
 	padding: 20px;
 	margin-left: 190px;
 	background-color: #FFFFFF;
-<<<<<<< HEAD
 }
 @media only screen and (max-width: 64em){
 body{margin: 0; 
@@ -160,6 +165,4 @@ footer{margin-left: 0;}
 	height: 0;}
 	#mobile{display: inline;}
 	#desktop{display: none;}
-=======
->>>>>>> parent of c33e7a3... Chapter 8 Updates
 }
