--- a/Exam 2/exam2.css
+++ b/Exam 2/exam2.css
@@ -1,61 +1,77 @@
-header, main, nav, footer, figure, figcaption {display: block;}
-body{
+header, main, nav, footer, figure, figcaption {
+    display: block;
+}
+
+body {
     color: #0b059b;
     background-color: #d8e1ff;
 }
-h1{
+
+h1 {
     text-align: center;
     color: #0b059b;
 }
-nav{
+
+nav {
     padding: 20px;
     float: left;
     width: 160px;
 }
+
 nav ul {
     padding-left: 0;
     margin: 0;
-    list-style-type:  none;
+    list-style-type: none;
     font-size: 1.5em;
 }
-nav a{
+
+nav a {
     text-decoration: none;
 }
-nav a:link{
+
+nav a:link {
     color: #0b059b;
 }
-nav a:visited{
+
+nav a:visited {
     color: #344873;
 }
-nav a:hover{
+
+nav a:hover {
     color: #9b1517;
 }
-figure{
+
+figure {
     margin-right: 50px;
     padding: 0;
-    float:right;
+    float: right;
 }
-figcaption{
+
+figcaption {
     text-align: center;
     color: #0b059b;
 }
-main ul{
+
+main ul {
     position: absolute;
     top: 150px;
     font-size: 1.2em;
 }
-#skyline{
+
+#skyline {
     width: 1050px;
-    height: 500px;
+    height: 465px;
     background-image: url(skyline.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     border: 2.5px solid #FFFFFF;
 
 }
+
 main {
     margin-left: 190px;
 }
-footer{
+
+footer {
     text-align: center;
 }
