--- a/Capstone/fnews.css
+++ b/Capstone/fnews.css
@@ -1,7 +1,7 @@
 body{
     font-family: 'Roboto Slab', serif;
     background-color: #0e5a9a;
-    background-image: linear-gradient(to bottom, #FFFFFF, #1e269a);
+    background-image: linear-gradient(to bottom, #FFFFFF, #1c1e23);
 }
 #wrapper {
     margin-left: auto;
@@ -15,6 +15,12 @@ body{
 }
 h1{
 
+}
+h2{
+    text-align: center;
+}
+h3{
+    text-align: center;
 }
 header{
     background-color: #0e5a9a;
@@ -31,6 +37,9 @@ header{
 }
 p{
 margin-top: 50px;
+}
+#paragraph{
+    margin-top: 0;
 }
 main{
     background-color: #FFFFFF;
@@ -79,7 +88,16 @@ nav a:link{
     background-size: 100%;
     background-repeat: no-repeat;
     border: groove;
+    margin-right: 10px;
+    margin-top: 30px;
 }
 table{
     text-align: center;
+    border: 2px solid black;
+}
+tr:nth-of-type(odd) {
+    background-color: #c0cbd7;
+}
+.header{
+    background-color: steelblue;
 }
